--- a/UnityProject/UnityProject.Editor.csproj
+++ b/UnityProject/UnityProject.Editor.csproj
@@ -139,6 +139,15 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\ABSystem\Editor\AssetBundle\ABBuilder.cs" />
+    <Compile Include="Assets\ABSystem\Editor\AssetBundle\AssetBundleBuilder4x.cs" />
+    <Compile Include="Assets\ABSystem\Editor\AssetBundle\AssetBundleBuilder5x.cs" />
+    <Compile Include="Assets\ABSystem\Editor\AssetBundle\AssetBundleDataBinaryWriter.cs" />
+    <Compile Include="Assets\ABSystem\Editor\AssetBundle\AssetBundleDataWriter.cs" />
+    <Compile Include="Assets\ABSystem\Editor\AssetBundle\AssetBundleUtils.cs" />
+    <Compile Include="Assets\ABSystem\Editor\AssetBundle\AssetTarget.cs" />
+    <Compile Include="Assets\ABSystem\Editor\AssetBundleBuildConfig.cs" />
+    <Compile Include="Assets\ABSystem\Editor\AssetBundleBuildPanel.cs" />
     <Compile Include="Assets\Editor\AtlasCollect\ACHelper.cs" />
     <Compile Include="Assets\Editor\AtlasCollect\ACModule.cs" />
     <Compile Include="Assets\Editor\AtlasCollect\ACPrefab.cs" />
@@ -152,7 +161,11 @@
     <Compile Include="Assets\Editor\AtlasLooker\ALAtlas.cs" />
     <Compile Include="Assets\Editor\AtlasLooker\ALStyles.cs" />
     <Compile Include="Assets\Editor\AtlasLooker\ALWindow.cs" />
-    <Compile Include="Assets\Editor\MapEditorWindow.cs" />
+    <Compile Include="Assets\Editor\TestEditor.cs" />
+    <Compile Include="Assets\Editor\UndoWindow.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Assets\ABSystem\link.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
